creating/adding more devskills

--- a/views/devskills/index.ejs
+++ b/views/devskills/index.ejs
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title>Express Dev-Skills</title>
-  </head>
-  <body>
-    <h1>Dev Skills</h1>
-    <ul>
-      <% devskills.forEach(function(t) { %>
-      <li>
-        <a href="/devskills/<%= t.id %>"><%= t.devskill %></a>
-      </li>
-      <% }); %>
-    </ul>
-  </body>
-</html>
+<<%- include('../partials/header') %>
+
+<ul>
+  <% devskills.forEach(function(t) { %>
+    <li>
+      <a href="/devskills/<%= t.id %>"><%= t.devskill %></a>
+      
+      <%= t.done ? "" : "" %>
+    </li>  
+  <% }) %>
+</ul>
+<a href="/devskills/new">Add Devskills</a>
+<%- include('../partials/footer') %>
